Ainda fazendo Service e Controller da Prova... Preciso ver as coisas de resposta também, que ta dando erro na adição de mais de 5 respostas, e tirar a possibilidade de mexer com respostas a partir da questão