@@ -1,10 +1,10 @@
 package com.senai.plataforma_de_treinamento_saep.aplication.dto.atividade;
 
 import com.senai.plataforma_de_treinamento_saep.domain.entity.atividade.Questao;
+import com.senai.plataforma_de_treinamento_saep.domain.entity.atividade.Resposta;
 import com.senai.plataforma_de_treinamento_saep.domain.enums.NivelDeDificuldade;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record QuestaoDTO(
         Long id,
@@ -13,7 +13,7 @@ public record QuestaoDTO(
         String pergunta,
         String imagem,
         Long professorId,
-        List<RespostaDTO> respostas,
+        List<Long> respostasId,
         Long unidadeCurricularId,
         NivelDeDificuldade nivelDeDificuldade,
         boolean status
@@ -23,13 +23,9 @@ public record QuestaoDTO(
         Long profId = (questao.getProfessorId() != null) ? questao.getProfessorId().getId() : null;
         Long ucId = (questao.getUnidadeCurricular() != null) ? questao.getUnidadeCurricular().getId() : null;
 
-        List<RespostaDTO> respostasDTO = questao.getRespostas().stream()
-                .map(resposta -> new RespostaDTO(
-                        resposta.getId(),
-                        resposta.getTexto(),
-                        resposta.getQuestao().getId(),
-                        resposta.isCertoOuErrado()))
-                .collect(Collectors.toList());
+        List<Long> respostasDTO = questao.getRespostas().stream()
+                .map(Resposta::getId)
+                .toList();
 
         return new QuestaoDTO(
                 questao.getId(),
